--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #15202b;
+}
+
 .App {
     text-align: center;
     background-color: #15202b;
