--- a/src/App.css
+++ b/src/App.css
@@ -16,16 +16,28 @@ body{
     color: white;
 }
 
+.close-btn{
+   text-align: left;
+   cursor: pointer;
+   font-size: 1.5rem;
+   margin-bottom: 15px
+}
+
 .container {
     display: flex;
     flex-direction: row;
 }
 
 .App-Body {
-    flex: 70%;
-    margin: 10px;
-    margin-left: 10%;
-    margin-right: 30%;
+    margin-top: 20px;
+    margin-left: 33%;
+    margin-right: 20%;
+    width: 47%;
+}
+
+.bio{
+    text-align: left;
+    padding: 20px;
 }
 
 .Tweet-List {
@@ -89,8 +101,8 @@ body{
 .textfield {
     font-family: inherit;
     background-color: white;
-    width: 40%;
-    height: 20%;
+    width: 50%;
+    height: 25%;
     font-size: calc(15px);
     color: black;
     border-width: 2px;
@@ -102,10 +114,11 @@ body{
 }
 
 .sidenav {
-    flex: 30%;
     height: 100%;
+    /* width: 30%; */
     text-align: left;
     padding-left: 20px;
+    position: fixed;
 }
 
 .sidenav a {
